--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/express": "^4.17.13",
         "@types/gravatar": "^1.8.3",
         "@types/jsonwebtoken": "^8.5.8",
+        "@types/request": "^2.48.8",
         "concurrently": "^7.0.0",
         "nodemon": "^2.0.15",
         "ts-node": "^10.5.0",
