--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "main": "index.ts",
     "scripts": {
         "start": "nodemon index",
-        "postinstall": "node-config-ts"
+        "postinstall": "node-config-ts",
+        "client": "npm start --prefix client",
+        "dev": "concurrently \"npm run start\" \"npm run client\""
     },
     "author": "",
     "license": "ISC",
