--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "nodemon index",
         "postinstall": "node-config-ts",
         "client": "npm start --prefix client",
-        "dev": "concurrently \"npm run start\" \"npm run client\""
+        "dev": "concurrently \"npm run start\" \"npm run client\"",
+        "build": "npm install --prefix client && npm run build --prefix client"
     },
     "author": "",
     "license": "ISC",
