--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,20 @@
 {
-    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+    "version": 2,
+    "builds": [
+        {
+            "src": "index.ts",
+            "use": "@vercel/node"
+        },
+        {
+            "src": "./client/build",
+            "use": "@vercel/static"
+        }
+    ],
+
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "index.ts"
+        }
+    ]
 }
