--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,13 @@
 {
     "version": 2,
+    "public": false,
     "builds": [
-        {
-            "src": "index.ts",
-            "use": "@vercel/node"
-        },
-        {
-            "src": "./client/build",
-            "use": "@vercel/static"
-        }
+        { "src": "package.json", "use": "@now/static-build" },
+        { "src": "index.ts", "use": "@now/node-server" }
     ],
-
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "index.ts"
-        }
+    "routes": [
+        { "src": "/routes/api/.*", "dest": "index.ts" },
+        { "src": "^/static/(.*)", "dest": "/static/$1" },
+        { "src": ".*", "dest": "/index.html" }
     ]
 }
