--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "start": "nodemon index",
         "postinstall": "node-config-ts",
         "client": "npm start --prefix client",
-        "dev": "concurrently \"npm run start\" \"npm run client\"",
-        "now-build": "npm run build --prefix client"
+        "dev": "concurrently \"npm run start\" \"npm run client\""
     },
     "author": "",
     "license": "ISC",
