--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
     "version": 2,
     "builds": [{ "src": "./index.ts", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "/" }]
+    "routes": [{ "src": "/.*", "dest": "intex.ts" }]
 }
