--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.ts",
     "scripts": {
-        "start": "nodemon index",
+        "start": "ts-node index.ts",
         "postinstall": "node-config-ts",
         "client": "npm start --prefix client",
         "dev": "concurrently \"npm run start\" \"npm run client\""
