--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "description": "",
     "main": "index.ts",
     "scripts": {
-        "start": "ts-node index.ts",
+        "start": "nodemon index",
         "postinstall": "node-config-ts",
         "client": "npm start --prefix client",
-        "dev": "concurrently \"npm run start\" \"npm run client\""
+        "dev": "concurrently \"npm run start\" \"npm run client\"",
+        "build": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
     },
     "author": "",
     "license": "ISC",
