--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "description": "",
     "main": "index.ts",
     "scripts": {
-        "start": "ts-node index",
+        "start": "node dist/index.js",
+        "startdev": "ts-node index",
         "postinstall": "node-config-ts",
-        "client": "npm start --prefix client",
-        "dev": "concurrently \"npm run start\" \"npm run client\"",
-        "build": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+        "client": "npm startdev --prefix client",
+        "dev": "concurrently \"npm run startdev\" \"npm run client\"",
+        "build": "NPM_CONFIG_PRODUCTION=false tsc && npm install --prefix client && npm run build --prefix client"
     },
     "author": "",
     "license": "ISC",
