--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
     "description": "",
     "main": "index.ts",
     "scripts": {
-        "start": "node dist/index.js",
-        "startdev": "ts-node index",
+        "start": "nodemon index",
         "postinstall": "node-config-ts",
-        "client": "npm startdev --prefix client",
-        "dev": "concurrently \"npm run startdev\" \"npm run client\"",
-        "build": "NPM_CONFIG_PRODUCTION=false tsc && npm install --prefix client && npm run build --prefix client"
+        "client": "npm start --prefix client",
+        "dev": "concurrently \"npm run start\" \"npm run client\"",
+        "build": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
     },
     "author": "",
     "license": "ISC",
@@ -22,6 +21,7 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.2",
         "node-config-ts": "^3.1.0",
+        "nodemon": "^2.0.15",
         "request": "^2.88.2"
     },
     "devDependencies": {
@@ -32,7 +32,6 @@
         "@types/jsonwebtoken": "^8.5.8",
         "@types/request": "^2.48.8",
         "concurrently": "^7.0.0",
-        "nodemon": "^2.0.15",
         "ts-node": "^10.5.0",
         "typescript": "^4.5.5"
     }
