--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.ts",
     "scripts": {
-        "start": "nodemon index",
+        "start": "ts-node index",
         "postinstall": "node-config-ts",
         "client": "npm start --prefix client",
         "dev": "concurrently \"npm run start\" \"npm run client\"",
@@ -22,7 +22,8 @@
         "mongoose": "^6.2.2",
         "node-config-ts": "^3.1.0",
         "nodemon": "^2.0.15",
-        "request": "^2.88.2"
+        "request": "^2.88.2",
+        "ts-node": "^10.5.0"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
@@ -32,7 +33,6 @@
         "@types/jsonwebtoken": "^8.5.8",
         "@types/request": "^2.48.8",
         "concurrently": "^7.0.0",
-        "ts-node": "^10.5.0",
         "typescript": "^4.5.5"
     }
 }
