--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/express": "^4.17.13",
         "bcryptjs": "^2.4.3",
+        "typescript": "^4.5.5",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "express-validator": "^6.14.0",
@@ -28,11 +30,9 @@
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
         "@types/config": "0.0.41",
-        "@types/express": "^4.17.13",
         "@types/gravatar": "^1.8.3",
         "@types/jsonwebtoken": "^8.5.8",
         "@types/request": "^2.48.8",
-        "concurrently": "^7.0.0",
-        "typescript": "^4.5.5"
+        "concurrently": "^7.0.0"
     }
 }
