--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "",
     "main": "index.ts",
     "scripts": {
-        "start": "ts-node index",
-        "postinstall": "node-config-ts",
+        "start": "tsc-watch --onSuccess \"node server/dist/index.js\"",
         "client": "npm start --prefix client",
         "dev": "concurrently \"npm run start\" \"npm run client\"",
         "build": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
@@ -13,12 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@types/express": "^4.17.13",
-        "@types/gravatar": "^1.8.3",
-        "@types/bcryptjs": "^2.4.2",
-        "@types/jsonwebtoken": "^8.5.8",
         "bcryptjs": "^2.4.3",
-        "typescript": "^4.5.5",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "express-validator": "^6.14.0",
@@ -26,13 +20,19 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.2",
         "node-config-ts": "^3.1.0",
-        "nodemon": "^2.0.15",
-        "request": "^2.88.2",
-        "ts-node": "^10.5.0"
+        "request": "^2.88.2"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
         "@types/config": "0.0.41",
+        "@types/express": "^4.17.13",
+        "@types/gravatar": "^1.8.3",
+        "@types/jsonwebtoken": "^8.5.8",
         "@types/request": "^2.48.8",
-        "concurrently": "^7.0.0"
+        "concurrently": "^7.0.0",
+        "nodemon": "^2.0.15",
+        "ts-node": "^10.5.0",
+        "tsc-watch": "^4.6.0",
+        "typescript": "^4.5.5"
     }
 }
