--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "startdev": "tsc-watch --onSuccess \"node server/dist/index.js\"",
         "start": "node server/dist/index.js",
-        "client": "npm startdev --prefix client",
+        "client": "npm start --prefix client",
         "dev": "concurrently \"npm run startdev\" \"npm run client\"",
         "build": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
     },
