--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "node server/dist/index.js",
         "client": "npm start --prefix client",
         "dev": "concurrently \"npm run startdev\" \"npm run client\"",
-        "build": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
     },
     "author": "",
     "license": "ISC",
